--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -33,7 +33,8 @@
 	}
 }
 
-.carDetail_content {
+.carDetail_content,
+.carDetail_extra {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -184,7 +185,37 @@
 	border-radius: 0.3125rem;
 	color: var(--black);
 }
+
+.cardInfo_specsList {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.cardInfo_specsItem {
+	display: flex;
+	flex-wrap: nowrap;
+
+	& img {
+		width: 1.75rem;
+		height: 1.75rem;
+		margin-right: 0.8rem;
+	}
+
+	& span {
+		font-weight: 600;
+		text-transform: uppercase;
+		font-size: 0.95rem;
+	}
+}
 /* ########## END INFO ########## */
+
+/* ########## EXTRA ########## */
+.carDetail_extraRating,
+.carDetail_extraDates {
+	width: 50%;
+}
+/* ########## END EXTRA ########## */
 
 .carDetail_stickyTop {
 	position: sticky;
