--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -34,7 +34,7 @@
 }
 
 .carDetail_content,
-.carDetail_extra {
+.carDetail_info {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -44,6 +44,7 @@
 
 	@media screen and (min-width: 1024px) {
 		flex-direction: row;
+		align-items: flex-start;
 	}
 }
 
@@ -187,6 +188,7 @@
 }
 
 .cardInfo_specsList {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
@@ -210,12 +212,59 @@
 }
 /* ########## END INFO ########## */
 
-/* ########## EXTRA ########## */
-.carDetail_extraRating,
-.carDetail_extraDates {
+/* ########## INFO EXTRA ########## */
+.carDetail_infoRating,
+.carDetail_infoDates {
 	width: 50%;
 }
-/* ########## END EXTRA ########## */
+
+.cardContent_header {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+
+	& div {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		& span {
+			margin-right: 1rem;
+			font-weight: 500;
+		}
+
+		& svg {
+			width: 1.5rem;
+			height: 1.5rem;
+			color: var(--golden);
+			fill: var(--golden);
+		}
+	}
+}
+
+.carDetail_infoTip {
+	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 1rem;
+	margin-bottom: 1rem;
+	color: var(--warning);
+	font-weight: 600;
+
+	& span {
+		width: 3.125rem;
+		height: 2.375rem;
+		background-color: var(--warning);
+		color: var(--white);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
+/* ########## END INFO EXTRA ########## */
 
 .carDetail_stickyTop {
 	position: sticky;
