--- a/src/components/carCards/CarCard_V1V2V3.module.css
+++ b/src/components/carCards/CarCard_V1V2V3.module.css
@@ -24,6 +24,7 @@
 	height: inherit;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 
 	& svg {
 		width: 1.4rem;
@@ -105,6 +106,7 @@
 	margin-bottom: 1.25rem;
 	padding-bottom: 0.6rem;
 	border-bottom: 1px solid var(--main-color);
+	width: 100%;
 }
 .cardContent_detailsTitle {
 	width: calc(100% - 3.25rem);
