--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,14 @@ h1 {
 	line-height: 1.5;
 }
 
+main {
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	min-height: 100vh;
+	height: 100%;
+}
+
 ol,
 ul {
 	list-style: none;
