--- a/src/pages/CarDetail.module.css
+++ b/src/pages/CarDetail.module.css
@@ -13,6 +13,10 @@
 	}
 }
 
+section.carDetail {
+	padding-top: var(--header-height);
+}
+
 .carDetail_header {
 	display: flex;
 	flex-direction: row;
@@ -47,6 +51,12 @@
 		align-items: flex-start;
 	}
 }
+.carDetail_info {
+	@media screen and (min-width: 768px) {
+		flex-direction: row;
+		align-items: flex-start;
+	}
+}
 
 /* ########## GALLERY ########## */
 .carGallery {
@@ -54,7 +64,6 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
-	margin-bottom: 2rem;
 
 	@media screen and (min-width: 1024px) {
 		width: 50%;
@@ -124,10 +133,6 @@
 		flex-direction: column;
 		align-items: end;
 		opacity: 1;
-
-		& button {
-			margin-top: 0;
-		}
 	}
 }
 
@@ -215,7 +220,11 @@
 /* ########## INFO EXTRA ########## */
 .carDetail_infoRating,
 .carDetail_infoDates {
-	width: 50%;
+	width: 100%;
+
+	@media screen and (min-width: 480px) {
+		width: 50%;
+	}
 }
 
 .cardContent_header {
