--- a/src/components/modal/CreateCategoryModal.module.css
+++ b/src/components/modal/CreateCategoryModal.module.css
@@ -51,8 +51,7 @@ label {
     font-weight: bold;
 }
 
-input[type="text"],
-textarea {
+.inputT,textarea {
     border: none;
     width: 100%;
     padding: 10px;
